# SlogViewer

./: CMakeLists.txt  EditConfigDlg.cpp  FindDlg.cpp  MainDlg.cpp  SLogAdapter.cpp  SLogViewer.cpp  SLogViewer.pro  SLogViewer.vcproj
uires/xml/: dlg_main.xml
